[project]
name = "api-docs-agent"
version = "0.1.0"
description = "OpenAPI-based API reference HTML and code example generation (web + mobile stacks)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.17.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]